- Apacge Commons Codec was removed from JOSM
git-svn-id: svn://svn-srv/skosigns/trunk@96 702c9929-26ad-4ec3-b8b7-334534ed37ec